<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parkour"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/login_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_dark_background"
        android:onClick="loadLogin"
        android:text="@string/button_login"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/register_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:onClick="Register"
        android:text="register"
        android:textColor="@color/cardview_light_background" />

</LinearLayout>