...

                <TextView
                    android:id="@+id/ProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Nick Name"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/RetrievedProfileName"
                    android:layout_width="wrap_content"
...
