<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.owner.android2.Activities.EventInfo"
    android:id="@+id/event_info">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="283dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
        tools:layout_editor_absoluteX="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Participants_txt"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/event_status"
            android:text="Participants"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-56dp"
            tools:text="Participant:" />

        <TextView
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_below="@+id/Participants_txt"
            android:layout_toLeftOf="@+id/event_slots"
            android:layout_toStartOf="@+id/event_slots"
            android:background="@drawable/border_set"
            android:text=""
            android:padding="6dp"
            android:textAlignment="center"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignLeft="@+id/player1"
            android:layout_alignStart="@+id/player1"
            android:layout_below="@+id/player1"
            android:background="@drawable/border_set"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="478dp" />

        <TextView
            android:id="@+id/player3"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_above="@+id/Participants_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/border_set"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="324dp" />

        <TextView
            android:id="@+id/player4"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_above="@+id/player5"
            android:layout_alignLeft="@+id/player5"
            android:layout_alignStart="@+id/player5"
            android:background="@drawable/border_set"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/player5"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignLeft="@+id/player3"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/player3"
            android:background="@drawable/border_set"
            android:text=""
            android:textAlignment="center"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="447dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="380dp"
        android:layout_height="224dp">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="EventName"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/event_slots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="6/10"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/event_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Active"
            android:textColor="@android:color/holo_green_light"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/event_slots"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/event_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="Sign Up"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:typeface="sans"
            android:onClick="registerUserForEvent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
