...
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register_activityy">Register</string>
    <string name="title_activity_profile2">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_achivements">Achivements</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_push_event">PushEventActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
